Update images path and fix overflow issue

--- a/src/components/ArticleCard/ArticleCard.css
+++ b/src/components/ArticleCard/ArticleCard.css
@@ -19,6 +19,7 @@
   border-radius: 0.75rem;
   object-fit: cover;
   object-position: top;
+  overflow: hidden;
 }
 
 .article-card-content {
